--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ apply plugin: Dependencies.BuildPlugins.dexCount
 repositories {
     maven { url 'https://maven.fabric.io/public' }
     maven { url "https://jitpack.io" }
-    maven { url 'http://oss.sonatype.org/content/repositories/snapshots' }
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     mavenCentral()
 }
 
